fixed mathml note icon alignment

--- a/pxe-annotation/demo/ann-plugin/output/annotator.css
+++ b/pxe-annotation/demo/ann-plugin/output/annotator.css
@@ -1075,7 +1075,12 @@
 	/*position: absolute;
 	bottom: 0;*/
 }
-
+.MathJax span{
+  display:inline-block !important;
+}
+.annotator-handle{
+  position: absolute !important;
+}
 .noteContainer {
     top: 20px;
     position: relative;
